[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = { version = "3", features = ["derive"]} 
colored = "2" # 终端多彩现实
jsonxf = "1.1" # json 格式化
mime = "0.3" # 处理mime
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"]} # 异步处理

